# Dynamic-Ride-Sharing-App-using-A-

./: app.py  pyproject.toml  requirements.txt  requirements.txt.txt
Dynamic Ride Sharing App/: a_star.py  app.py  rideshare.db
Dynamic Ride Sharing App/templates/: book_ride.html  rider_dashboard.html  route_map.html  single_ride_map.html
