[tool.poetry]
name = "rideshare-app"
version = "1.0.0"
description = "Flask rideshare application with A* routing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.3"
gunicorn = "23.0.0"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
